--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {
 }
 
 .nav-btn:hover {
-  color: #6B7280;
+  color: #1E3A8A;
 }
 
 /* Botão com imagem à esquerda */
@@ -91,7 +91,7 @@ body {
 }
 
 .nav-photo-btn:hover {
-  color: #6B7280;
+  color: #1E3A8A;
   transform: scale(1.1);
 }
 
@@ -297,12 +297,12 @@ body {
   margin: 0;
   padding: 0;
   color: #1E3A8A;
-  font-size: 2.6em;
+  font-size: 2.2em;
 }
 
 .card .face.face1 p {
-  font-size: 1.8em;
-  margin-top: 1em;
+  font-size: 1.5em;
+  margin-top: 1.6em;
   color: #333;
   line-height: 1.5;
   font-weight: 500;
@@ -321,7 +321,7 @@ body {
 }
 
 .card:nth-child(2) .face.face2 {
-  background: linear-gradient(45deg, #0EA5E9, #38BDF8);
+  background: linear-gradient(45deg, #3B82F6, #0EA5E9 ); 
 }
 
 .card:nth-child(3) .face.face2 {
@@ -360,9 +360,20 @@ body {
   font-size: 2em;
 }
 
+.face.face2 img {
+  width: 350px;
+  height: 340px;
+  transition: transform 0.5s ease; /* animação suave */
+}
+
+.card:hover .face.face2 img {
+  transform: scale(0.2); /* diminui para 70% do tamanho */
+}
+
+
 
 .footer {
-  background-color: #1E3A8A;
+  background-color: #6B7280	;
   color: white;
   text-align: center;
   padding: 2.5rem 1rem;
