--- a/CSS/index.css
+++ b/CSS/index.css
@@ -102,7 +102,7 @@ body {
 .mapa {
   position: relative;
   height: 100vh;
-  background-image: url(assets/WhatsApp\ Video\ 2025-11-11\ at\ 14.30.43.gif);
+  background-image: url(/assets/WhatsApp\ Video\ 2025-11-11\ at\ 14.30.43.gif);
   background-size: cover;
   background-position: center;
   display: flex;
