--- a/CSS/index.css
+++ b/CSS/index.css
@@ -20,7 +20,6 @@ body {
   top: 0;
   left: 0;
   z-index: 100;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.15);
   transition: background-color 0.3s ease, padding 0.3s ease;
 }
 
@@ -102,9 +101,6 @@ body {
 .mapa {
   position: relative;
   height: 100vh;
-  background-image: url(/assets/WhatsApp\ Video\ 2025-11-11\ at\ 14.30.43.gif);
-  background-size: cover;
-  background-position: center;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -112,6 +108,18 @@ body {
   padding-top: 100px;
   overflow: hidden;
 }
+
+/* Deixar o vídeo como fundo */
+.video-fundo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* cobre toda a área */
+  z-index: -1; /* fica atrás do conteúdo */
+}
+
 
 /* camada escura por cima do GIF (usando o modelo da segunda versão) */
 .mapa::before {
@@ -418,10 +426,10 @@ iframe {
 
 /* === GRID CONTAINER === */
 .container {
-  width: 1150px;
+  width: 1110px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-  grid-gap: 15px;
+  grid-gap: 12px;
   margin: 0 auto;
  
 }
@@ -435,6 +443,7 @@ iframe {
   background: #fff;
   box-shadow: 0 5px 30px rgba(0, 0, 0, 0.5);
   border-radius: 15px;
+  margin-left: 20px;
   
 }
 
